#     http://bahut.alma.ch/2007/08/embedding-documentation-in-shell-script_16.html
#    -support for upper case sharp s for String
#    -support for pseudo signal "0" with Process kill command
#    -rollback for PATH and MANPATH during __cleanUp
#    -removed version number from oobash filename
#    -set +errexit (should be default anyway - needed by some private functions) in oobash.source
#    -added Dependencies: diff
#    -Fixes
# Version:      0.39.6
#    -added File: insertAfterLine, insertBeforeLine
#    -added Ssh: copy, execModule + module directory + example.mod
#    -added private functions: __isBashInteger
#    + use of __isBashInteger where convenient
#    -small modifications for Script.generator
#    -replaced private __getPointer by a simple __COUNTER__ variable
#    -Fixes
# Version:      0.39.7
#    -modified Man.generator to have bold methodnames in class manpages
#     and to be able to create script manpages
#    -small cleanup for Script.generator
#    -modified Class.generator to write a file in the myClassFiles directory
#    -oobash.source now tries to source all oobash files in the myClassFiles directory
#    -File: added methods: -indexOfExtension
#    -added private function: __localDateFormat
#    -oobash manpages moved/go to man3
#    -script manpages go to man1
#    -new dependencies: -pod2man, -pod2usage
#    -Fixes


#################################################################
# Features:
# String manipulation with umlauts and other special characters
# Math methods accept arguments with scientific notation
# Math methods accept arguments float numbers with "." or ","
# Developer support: Class.generator, Man.generator, Script.generator
# Use of bash autocompletion
# Registry for environment cleanUp
# i18n
# man pages
# "decorators" for your functions (with almost pythonic look)
# Manage your system processes
#################################################################