@@ -4,13 +4,22 @@ if (( $? != 0 )); then
    exit 0
 fi
 
+I18n.out.println
+
 LANG=en_GB.utf8
+System.out.println "   My locale is $LANG (english)"
 I18n.out.println "   Example:"
+I18n.out.println
 
 LANG=de_DE.utf8
+System.out.println "   My locale is $LANG (german)"
 I18n.out.println "   Example:"
+I18n.out.println
 
 LANG=it_IT.utf8
+System.out.println "   My locale is $LANG (italian)"
 I18n.out.println "   Example:"
+
+I18n.out.println
 
 System.exit 0
